--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   lottie: ^3.1.2
   animated_splash_screen: ^1.3.0
   flutter_screenutil: ^5.9.3
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
